kube/prod/10-traefik-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: terminal-auth
  namespace: palad
spec:
  forwardAuth:
    address: http://web.palad.svc.cluster.local:4000/api/v1/internal/ws_auth
    trustForwardHeader: true
    authResponseHeadersRegex: ^X-
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-basic-auth
  namespace: palad
spec:
  basicAuth:
    secret: traefik-basic-auth
    realm: "Palad Admin"
