kube/prod/09-traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: palad
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.3
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1500m"
              memory: "1Gi"
          args:
            - "--api.dashboard=true"
            - "--api.insecure=true"
            - "--providers.kubernetescrd=true"
            - "--providers.kubernetescrd.allowCrossNamespace=true"
            - "--providers.kubernetescrd.namespaces=palad"
            - "--providers.kubernetesingress=true"
            - "--providers.kubernetesingress.namespaces=palad"
            - "--entrypoints.traefik.http.tls=true"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            - "--entrypoints.adminwebsecure.address=:8443"
            - "--certificatesresolvers.letsencrypt.acme.email=admin@palad.ai"
            - "--certificatesresolvers.letsencrypt.acme.storage=/data/acme.json"
            - "--certificatesresolvers.letsencrypt.acme.dnschallenge=true"
            - "--certificatesresolvers.letsencrypt.acme.dnschallenge.provider=route53"
            - "--log.level=DEBUG"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: adminwebsecure
              containerPort: 8443
            - name: traefik
              containerPort: 8090
          volumeMounts:
            - name: acme-storage
              mountPath: /data
      volumes:
        - name: acme-storage
          persistentVolumeClaim:
            claimName: traefik-acme
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: palad
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
  namespace: palad
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: traefik
  loadBalancerSourceRanges:
    - 34.1.250.211/32
  ports:
    - name: adminwebsecure
      port: 443
      targetPort: 8443

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: palad
spec:
  entryPoints:
    - adminwebsecure
  routes:
    - match: Host(`traefik.palad.ai`)
      kind: Rule
      middlewares:
        - name: admin-basic-auth
        - name: traefik-dashboard-redirect
      services:
        - name: api@internal
          kind: TraefikService

  tls:
    certResolver: letsencrypt
    domains:
      - main: palad.ai
        sans:
          - www.palad.ai
          - traefik.palad.ai
          - temporal.palad.ai

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-redirect
  namespace: palad
spec:
  redirectRegex:
    regex: "^(https?://[^/]+)/?$"
    replacement: "${1}/dashboard/"
