kube/prod/11-traefik-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: palad
  labels:
    palad.ai/runtime-origin: palad
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`dev.aixle.com`) || Host(`www.dev.aixle.com`)) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: web
          port: 4000
  tls:
    certResolver: letsencrypt
    domains:
      - main: dev.aixle.com
        sans:
          - www.dev.aixle.com
          - traefik.aixle.com
          - temporal.aixle.com
